// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch task warnings if it has to 1`] = `
<Modal
  contentLabel="warnings"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      warnings
    </h2>
  </header>
  <div
    className="modal-body modal-container js-analysis-warnings"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="panel panel-vertical"
        key="message foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "message foo",
              }
            }
          />
        </div>
      </div>
      <div
        className="panel panel-vertical"
        key="message-bar"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "message-bar",
              }
            }
          />
        </div>
      </div>
      <div
        className="panel panel-vertical"
        key="multiline message
secondline
  third line"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "multiline message<br>secondline<br>  third line",
              }
            }
          />
        </div>
      </div>
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      close
    </ButtonLink>
  </footer>
</Modal>
`;

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="warnings"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      warnings
    </h2>
  </header>
  <div
    className="modal-body modal-container js-analysis-warnings"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="panel panel-vertical"
        key="foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "warning 1",
              }
            }
          />
        </div>
      </div>
      <div
        className="panel panel-vertical"
        key="foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "warning 2",
              }
            }
          />
        </div>
      </div>
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      close
    </ButtonLink>
  </footer>
</Modal>
`;

exports[`should render correctly: do not show dismissable links for anonymous 1`] = `
<Modal
  contentLabel="warnings"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      warnings
    </h2>
  </header>
  <div
    className="modal-body modal-container js-analysis-warnings"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="panel panel-vertical"
        key="foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Lorem ipsum",
              }
            }
          />
        </div>
      </div>
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      close
    </ButtonLink>
  </footer>
</Modal>
`;

exports[`should render correctly: with dismissable warnings 1`] = `
<Modal
  contentLabel="warnings"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      warnings
    </h2>
  </header>
  <div
    className="modal-body modal-container js-analysis-warnings"
  >
    <DeferredSpinner
      loading={false}
    >
      <div
        className="panel panel-vertical"
        key="foo"
      >
        <WarningIcon
          className="pull-left spacer-right"
        />
        <div
          className="overflow-hidden markdown"
        >
          <span
            dangerouslySetInnerHTML={
              {
                "__html": "Lorem ipsum",
              }
            }
          />
          <div
            className="spacer-top display-flex-inline"
          >
            <ButtonLink
              disabled={false}
              onClick={[Function]}
            >
              dismiss_permanently
            </ButtonLink>
          </div>
        </div>
      </div>
    </DeferredSpinner>
  </div>
  <footer
    className="modal-foot"
  >
    <ButtonLink
      className="js-modal-close"
      onClick={[MockFunction]}
    >
      close
    </ButtonLink>
  </footer>
</Modal>
`;
